--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "clsx": "^2.0.0",
     "embla-carousel-autoplay": "^8.0.0-rc14",
     "embla-carousel-react": "^8.0.0-rc14",
-    "framer-motion": "^10.16.4",
-    "next": "14.0.1",
+    "framer-motion": "^11.0.3",
+    "html-react-parser": "^5.1.2",
+    "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-parallax-tilt": "^1.7.172",
-    "sharp": "^0.32.6",
     "sonner": "^1.1.0",
     "tailwind-merge": "^2.0.0",
     "zod": "^3.22.4"
@@ -30,9 +30,9 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.1",
+    "eslint-config-next": "^14.0.4",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
